--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "social-chat-server",
   "version": "0.0.1",
-  "description": "HKBU Summer Campo chat server",
+  "description": "HKBU Summer Camp chat server",
   "dependencies": {
     "express": "^4.10.2",
     "socket.io": "^1.3.5"
